2008-05-15  Akira TAGOH  <tagoh@redhat.com>

	* README: Add more docs.

2008-05-14  Akira TAGOH  <tagoh@redhat.com>

	* src/factory.c (imsettings_manager_real_what_im_is_running):
	Ignore an error if the pid file doesn't exist. (RH#445129)

2008-05-12  Akira TAGOH  <tagoh@redhat.com>

	* imsettings/imsettings-object.c (imsettings_object_real_dump):
	Use macro to convert the variable type.
	(imsettings_object_real_load): likewise.

	* src/factory.c (_get_pid): check the existence of the pid file first.

2008-05-11  Akira TAGOH  <tagoh@redhat.com>

	* imsettings/imsettings-info.c: Inherit from IMSettingsObject to
	dump/load the object.

	* imsettings/imsettings-utils.h (imsettings_n_pad4)
	(imsettings_pad4, imsettings_skip_pad4, imsettings_swap16)
	(imsettings_swapu16, imsettings_swap32, imsettings_swapu32)
	(imsettings_swap64, imsettings_swapu64): new macros.

	* imsettings/imsettings-object.c: new.

2008-04-29  Akira TAGOH  <tagoh@redhat.com>

	* src/factory.c (_get_pid): new.
	(imsettings_manager_real_what_im_is_running): check if pid is valid
	or not.

	* utils/imsettings-reload.c (main): exit if opening session bus
	is failed.

2008-04-28  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/protocol.c (xim_protocol_process_event): proper casting
	to the pointer.

2008-04-25  Akira TAGOH  <tagoh@redhat.com>

	* imsettings/Makefile.am: correct build order.

	* src/factory.c (imsettings_manager_real_what_im_is_running):
	real function to check what IM is running.

	* imsettings/imsettings-request.c (imsettings_request_what_im_is_running):
	new function.

	* imsettings/imsettings-observer.c (imsettings_what_input_method_is_running):
	new function.

	* imsettings/imsettings.xml (WhatInputMethodIsRunning): new method.

	* utils/imsettings-list.c (main): Show "*" if IM is really running and
	"-" for not running but is supposed to run by default for user.

2008-04-23  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/protocol.c (xim_protocol_swap32): Fix a typo.
