@@ -1,4 +1,5 @@
-GLIB_REQUIRED=2.14.0
-GIO_REQUIRED=2.16.0
-DBUS_REQUIRED=0.23
+CHECK_REQUIRED=0.9.4
 DBUS_GLIB_REQUIRED=0.74
+DBUS_REQUIRED=0.23
+GIO_REQUIRED=2.16.0
+GLIB_REQUIRED=2.14.0
