@@ -1,5 +1,15 @@
 2008-05-15  Akira TAGOH  <tagoh@redhat.com>
 
+	* configure.ac: Add checking if "check" is available.
+
+	* tests/Makefile.am: new.
+
+	* tests/imsettings-object.c: test case for IMSettingsObject.
+
+	* tests/main.[ch]: core module for the unit testing.
+
+	* requires (CHECK_REQUIRED): for Unit testing.
+
 	* README: Add more docs.
 
 2008-05-14  Akira TAGOH  <tagoh@redhat.com>
